style.css
* {
  margin: 0;
  box-sizing: border-box;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body {
  display: flex;
  align-items: center;
  height: 100vh;
  width: 100vw;
  justify-content: center;
  background-color: rgb(199, 188, 188);
}

.clock {
  display: flex;
  gap: 100px;
}

.clock div {
  position: absolute;
  text-align: center;
}

.clock .circles {
  width: 200px;
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  font-size: 3em;
  font-weight: 600;
}

.clock .ap {
  position: relative;
  font-size: 3em;
  display: flex;
  align-items: center;
  transform: translateX(-30px);
 }

